# pyls

./: LICENSE  README.md  pyproject.toml
pyls/: __main__.py  help.py  ls.py  utils.py
tests/: test_ls.py
