[project]
name = "pyls"
version = "1.0.0"
description = "A Python implementation of the 'ls' command"
authors = [{ name = "Vishnu T Suresh", email = "vishnutsuresh@live.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

dependencies = []

[project.scripts]
pyls = "pyls.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
